<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.theta_edge.barcode.ExternalInspection"
    android:orientation="horizontal"
    android:background="@drawable/bg7">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Simpan"
        android:id="@+id/btn_simpan"
        android:clickable="true"
        android:onClick="simpan"
        android:layout_below="@+id/displaycurrLoc"
        android:layout_alignStart="@+id/button4"
        android:background="@drawable/buttonshape"
        android:textColor="@color/white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Imbas"
        android:id="@+id/button4"
        android:clickable="true"
        android:onClick="kePengimbas2"
        android:layout_below="@+id/btn_simpan"
        android:layout_alignParentEnd="true"
        android:background="@drawable/buttonshape"
        android:textColor="@color/white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log Keluar"
        android:id="@+id/button_finish"
        android:clickable="true"
        android:onClick="logKeluar"
        android:layout_below="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:background="@drawable/buttonshape"
        android:textColor="@color/white" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/notes"
        android:hint="Catatan"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:nestedScrollingEnabled="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/black"
        android:layout_toStartOf="@+id/btn_simpan"
        android:layout_alignTop="@+id/btn_simpan" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="No Siri Aset :"
        android:id="@+id/nosiri"
        android:textColor="@color/red"
        android:layout_below="@+id/scanDate"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/displaynosiri"
        android:hint="@string/serialno"
        android:textColor="@color/black"
        android:ellipsize="end"
        android:gravity="left"
        android:textStyle="normal"
        android:singleLine="false"
        android:nestedScrollingEnabled="true"
        android:layout_below="@+id/nosiri"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Nama Aset :"
        android:id="@+id/asetname"
        android:textColor="@color/red"
        android:layout_below="@+id/displaynosiri"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/displayassetname"
        android:hint="@string/assetname"
        android:textColor="@color/black"
        android:ellipsize="end"
        android:gravity="left"
        android:textStyle="normal"
        android:singleLine="false"
        android:nestedScrollingEnabled="true"
        android:layout_below="@+id/asetname"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Nama Pegawai :"
        android:id="@+id/officername"
        android:gravity="center_horizontal"
        android:textColor="@color/red"
        android:layout_below="@+id/displayassetname"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Lokasi :"
        android:id="@+id/originalLoc"
        android:textColor="@color/red"
        android:layout_below="@+id/officername"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/displaycurrLoc"
        android:hint="@string/origLoc"
        android:gravity="left"
        android:textStyle="normal"
        android:singleLine="false"
        android:nestedScrollingEnabled="true"
        android:textColor="@color/black"
        android:ellipsize="none"
        android:layout_below="@+id/originalLoc"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/displayofficername"
        android:hint="@string/officername"
        android:gravity="left"
        android:textStyle="normal"
        android:singleLine="false"
        android:nestedScrollingEnabled="true"
        android:textColor="@color/black"
        android:ellipsize="end"
        android:layout_below="@+id/displayassetname"
        android:layout_above="@+id/displaycurrLoc"
        android:layout_toEndOf="@+id/officername"
        android:layout_alignEnd="@+id/btn_simpan" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Tarikh Imbas :"
        android:id="@+id/scanDate"
        android:layout_alignParentStart="true"
        android:textColor="@color/red" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/displayscanDate"
        android:layout_alignTop="@+id/scanDate"
        android:hint="@string/scanDate"
        android:layout_alignEnd="@+id/displaynosiri"
        android:ellipsize="end"
        android:layout_above="@+id/displaynosiri"
        android:layout_toEndOf="@+id/scanDate"
        android:textColor="@color/black" />

</RelativeLayout >
